# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  binary_maze.txt  cellule.py  config.txt  coords.txt  main.py  maze.py  maze.txt  parsing.py  perfect_maze.py  print_maze.py  pyproject.toml  readme.me  solver.py
mazegen/: __init__.py  cellule.py  generator.py  parsing.py  print_maze.py
